--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a href="#">Contact Me</a>
             </div>
         </div>
-        <a href="https://api.whatsapp.com/send?phone=51955081075&text=Hola%21%20Quisiera%20m%C3%A1s%20informaci%C3%B3n%20sobre%20Varela%202." class="float" target="_blank">
+        <a href="https://ultramsg.com/m/3rWJ3x5." class="float" target="_blank">
             <i class="fa fa-whatsapp my-float"></i>
             </a>
     </section>
